<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundhome"
    android:paddingHorizontal="15dp"
    tools:context=".ui.game.GameActivity">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/whats_vegetable"
        android:textAlignment="textStart"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/cardImage"
        app:layout_constraintEnd_toStartOf="@+id/title2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/question_mark"
        android:textAlignment="textEnd"

        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialogTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialogTitle"
        app:layout_constraintTop_toTopOf="@+id/dialogTitle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
        app:layout_constraintBottom_toTopOf="@+id/choice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgFruit"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:background="@drawable/wortel"
                android:contentDescription="@string/guess"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:cornerRadius="10dp"
        app:backgroundTint="@color/green_2"
        app:layout_constraintBottom_toTopOf="@+id/choice2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImage"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:backgroundTint="@color/green_2"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/choice3"
        app:layout_constraintEnd_toEndOf="@+id/choice1"
        app:layout_constraintStart_toStartOf="@+id/choice1"
        app:layout_constraintTop_toBottomOf="@+id/choice1"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:backgroundTint="@color/green_2"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/choice4"
        app:layout_constraintEnd_toEndOf="@+id/choice2"
        app:layout_constraintStart_toStartOf="@+id/choice2"
        app:layout_constraintTop_toBottomOf="@+id/choice2"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/choice4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:backgroundTint="@color/green_2"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/choice3"
        app:layout_constraintStart_toStartOf="@+id/choice3"
        app:layout_constraintTop_toBottomOf="@+id/choice3"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/choice2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice1"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>